src/App.scss
body {
  border: 5px dotted green;
}

.ce-chats-container {
  border: 2px solid blue;
}

.ce-chat-engine {
  border: 2px solid red;
}

#header-message {
  border: 2px solid pink;
}

.ce-chat-card {
  border: 2px dashed gray;
}

.display-none {
  display: none;
}

